BUG: changed the style of buttons to avoid line-breaks on long labels

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -805,7 +805,8 @@ footer {
 
             span.btn-text {
                 margin:5px 0 5px 10px;
-                display: inline-block;
+//                display: inline-block;
+                float: left;
             }
 
             span.statusicon {
